--- a/Server-side/Resource-Service/pom.xml
+++ b/Server-side/Resource-Service/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.hr</groupId>
-	<artifactId>HR-service</artifactId>
+	<groupId>com.resource</groupId>
+	<artifactId>Resource-Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>HR-service</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Resource-Service</name>
+	<description>resource  microservice</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -26,10 +26,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
