--- a/Server-side/Library-Management-System/src/main/resources/application.properties
+++ b/Server-side/Library-Management-System/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8083
+spring.application.name=LMS-service
 
+#connect to db
+
+spring.datasource.url=jdbc:mysql://localhost:3306/library-management-system
+spring.datasource.username=root
+spring.datasource.password=pass@word1
+
+#specify the sql dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=DEBUG
