--- a/Client-side/DigitalBook/package.json
+++ b/Client-side/DigitalBook/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@coreui/angular": "^4.3.0",
     "bootstrap": "^5.2.3",
     "i": "^0.3.7",
+    "ngx-loading-buttons": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
