--- a/Server-side/User-Microservice/src/main/resources/application.properties
+++ b/Server-side/User-Microservice/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.application.name=USER-Service
 #mailing service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xx
-spring.mail.password=yy
+spring.mail.username=kumarrishabh201@gmail.com	
+spring.mail.password=mvlpmhujpsdprbbq
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
