--- a/Server-side/Book-Microservice/src/main/resources/application.properties
+++ b/Server-side/Book-Microservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port:8082
 
 #connect to db
-spring.datasource.url=jdbc:mysql://localhost:3306/book
+spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_book
 spring.datasource.username=root
 spring.datasource.password=pass@word1
 
