--- a/Server-side/User-Microservice/src/main/resources/application.properties
+++ b/Server-side/User-Microservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 #connect to db
-spring.datasource.url=jdbc:mysql://localhost:3306/bookuser
+spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_user
 spring.datasource.username=root
 spring.datasource.password=pass@word1
 
@@ -16,7 +16,7 @@ spring.application.name=USER-Service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kumarrishabh201@gmail.com	
-spring.mail.password=mvlpmhujpsdprbbq
+spring.mail.password=jnsafagtwqyiwqoz
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
@@ -24,4 +24,5 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
