--- a/Server-side/User-Microservice/src/main/resources/application.properties
+++ b/Server-side/User-Microservice/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.application.name=USER-Service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kumarrishabh201@gmail.com	
-spring.mail.password=jnsafagtwqyiwqoz
+spring.mail.password=
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
