--- a/Server-side/Book-Microservice/src/main/resources/application.properties
+++ b/Server-side/Book-Microservice/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port:8082
 
 #connect to db
-spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_book
-spring.datasource.username=root
-spring.datasource.password=pass@word1
+#spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_book
+#spring.datasource.username=root
+#spring.datasource.password=pass@word1
+
+spring.datasource.url=jdbc:mysql://digitalbook.c4rhotbyupxm.us-east-1.rds.amazonaws.com/digitalbook_book
+spring.datasource.username=admin
+spring.datasource.password=admin1234
+
 
 #specify the sql dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
