--- a/Server-side/User-Microservice/src/main/resources/application.properties
+++ b/Server-side/User-Microservice/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8081
 #connect to db
-spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_user
-spring.datasource.username=root
-spring.datasource.password=pass@word1
+#spring.datasource.url=jdbc:mysql://localhost:3306/digitalbook_user
+#spring.datasource.username=root
+#spring.datasource.password=pass@word1
+
+spring.datasource.url=jdbc:mysql://digitalbook.c4rhotbyupxm.us-east-1.rds.amazonaws.com/digitalbook_user
+spring.datasource.username=admin
+spring.datasource.password=admin1234
 
 #specify the sql dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -16,7 +20,7 @@ spring.application.name=USER-Service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kumarrishabh201@gmail.com	
-spring.mail.password=
+spring.mail.password=cfzyjsacoywglnov
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
